# um-mouse-hub

./: .gitignore  CMakeLists.txt  LICENSE  build.ps1
src/: main.cpp
src/methods/: DirectInput.cpp  NtUserInjectMouseInput.cpp  PostMessage.cpp  SendMessaage.cpp  SendMessage.cpp  hidrawwrite.cpp  imethod.hpp  inputinjector.cpp  mouseevent.cpp  physicalcursorpos.cpp  sendInput.cpp  setcursorpos.cpp  syscallWin32u.cpp
